--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <form action="">
+        <fieldset>
+            <legend>Enter your information</legend>
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required minlength="8">
+            </div>
+            <div>
+                <label for="country">Country:</label>
+                <select id="Country">
+                    <option value="ch">Switzerland</option>
+                    <option value="fr">France</option>
+                    <option value="de">Germany</option>
+                    <option value="nl">The Netherlands</option>
+                </select>
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" required minlength="8">
+            </div>
+            <div>
+                <label for="confirmPassword">Confirm Password:</label>
+                <input type="password" id="confirmPassword" required>
+            </div>
+        </fieldset>
+    </form>
 </body>
 </html>
