--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <form action="">
+    <form action novalidate>
         <fieldset>
             <legend>Enter your information</legend>
             <div>
