--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required minlength="8">
+                <span class="error" aria-live="polite"></span>
             </div>
             <div>
                 <label for="country">Country:</label>
