Add zipcode input

--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
                 <span class="error" aria-live="polite"></span>
             </div>
             <div>
-                <label for="country">Country:</label>
+                <label for="Country">Country:</label>
                 <select id="Country">
                     <option value="ch">Switzerland</option>
                     <option value="fr">France</option>
                     <option value="de">Germany</option>
                     <option value="nl">The Netherlands</option>
                 </select>
+            </div>
+            <div>
+                <label for="ZIP">ZIP : </label>
+                <input type="text" id="ZIP" />
             </div>
             <div>
                 <label for="password">Password:</label>
